--- a/studentapp/pom.xml
+++ b/studentapp/pom.xml
@@ -62,6 +62,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>student-app</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
